# io500

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README-ISC20.txt  README-S3.md  README-sc20.txt  README.md  config-debug-run.ini  config-full.ini  config-minimal.ini  config-sample-all.ini  config-scc.ini  config-some.ini  config-test-run.ini  empty.ini  example-full.ini  io500-info-editor.py  io500-verify  io500.sh  makefile  prepare-s3.sh  prepare.sh  result.txt
.github/: CODEOWNERS
find/: sfind.ini  sfind.sh
include/: io500-debug.h  io500-opt.h  io500-phase.h  io500-util.h
info-creator/: io500_add_osinfo.py  io500_add_resultsinfo.py  io500_add_slurm.py  io500_info_editor.py
src/: debug.c  ini-parse.c  main.c  phase-definitions.h  phase_concurrent.c  phase_concurrent.h  phase_dbg.c  phase_find.c  phase_find.h  phase_find_easy.c  phase_find_hard.c  phase_ior.c  phase_ior.h  phase_ior_easy.c  phase_ior_easy_read.c  phase_ior_easy_write.c  phase_ior_hard.c  phase_ior_hard_read.c  phase_ior_hard_write.c  phase_ior_rnd.c  phase_ior_rnd1MB.c  phase_ior_rnd4K.c  phase_ior_rnd4k_easy_read.c  phase_ior_rnd_read.c  phase_ior_rnd_read1MB.c  phase_ior_rnd_read4K.c  phase_ior_rnd_read4k-easywrite.c  phase_ior_rnd_write.c  phase_ior_rnd_write1MB.c  phase_ior_rnd_write4K.c  phase_mdtest.c  phase_mdtest.h  phase_mdtest_easy.c  phase_mdtest_easy_delete.c  phase_mdtest_easy_stat.c  phase_mdtest_easy_write.c  phase_mdtest_hard.c  phase_mdtest_hard_delete.c  phase_mdtest_hard_read.c  (+12 more)
src/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  metatest.c
(+5 files in other folders)
